--- a/style.css
+++ b/style.css
@@ -64,3 +64,10 @@ img {
     width: 90%;
   }
 }
+
+button {
+  display: block;
+  border: none;
+  text-decoration: none;
+  background-color: rgba(255, 0, 0, 0.726);
+}
