--- a/style.css
+++ b/style.css
@@ -65,9 +65,22 @@ img {
   }
 }
 
-button {
+#button {
   display: block;
   border: none;
+  opacity: 40%;
+  background-color: rgba(255, 255, 0, 0.541);
+  border-radius: 50%;
   text-decoration: none;
-  background-color: rgba(255, 0, 0, 0.726);
+}
+#button:hover {
+  background-color: yellow;
+  opacity: 100%;
+
+}
+#total-result {
+  border-radius: 50%;
+  font-weight: 700;
+  color: red;
+  font-size: 120%;
 }
